[package]
name = "bupc"
version = "0.1.0"
license-file = "LICENSE"
description = "Bunny Unit Processing Central. An assembly-like interpreted language written using Rust"
authors = ["Avery Murray <averylapine@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[features]
verbose = []
